# dotfiles

./: .bashrc  .colorrc  .env  .env.sample  .gitconfig_shared  .gitignore  .gitignore_global  .mise.toml  .p10k.zsh  .vimrc  .zpreztorc  .zshenv  .zshrc  LICENSE  README.md
.bashrc.d/: base.sh  my.sh
.bin/: Makefile.multipass  clear_ssh_folder_cache.bat  clear_ssh_folder_cache.ps1  dotfiles  dotfiles_arm  dust  gen_tls_certs.sh  install-clis.sh  install-cloudflared.bat  install-golang.sh  install-recommended-vscode-extensions.sh  install.sh  mise_and_docker.sh  myubuntu-setup.sh  recommend_cli_install.sh  rust_install  setup-libs.sh  setup-ubuntu.sh  setup-zsh.sh  setup.sh  ubuntu_setup.sh  update-golang.sh  zsh_setup.sh
.config/nvim/: init.vim
.github/workflows/: check.yml
.my/: cheatsheet.infra.sh  cheatsheet.k8s.sh  cheatsheet.sh  cheatsheet.txt  cheatsheet.vim.sh  cheatsheet_vim.sh  mise.sh
.my/aliases/: all.sh  ansible.sh  common.sh  database.sh  docker.sh  env.sh  k6.sh  kubernetes.sh  language.sh  main.sh  mise.sh  my.sh  poetry.sh  rust.sh  stat.sh  terminal.sh  terraform.sh
.my/bak/: default.ubuntu24.bashrc
.my/nodejs/: package-lock.json  package.json
.my/poetry/: pyproject.toml
.my/scripts/: install-recommended-vscode-extensions.sh  mise.sh  mise_and_docker.sh
.my/shell_base/: base.bash  base.zsh
.my/switch_cloud/: gcp.sh  switch.sh
.my/zsh/: base.zsh
.vim/: functions.vim  keymaps.vim  lets.vim  options.vim
.zsh/: base.zsh
.zshrc.d/: base.zsh
develop/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
docker-test/: README.md
(+21 files in other folders)
