[tool.poetry]
name = "mypoetry"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
thefuck = "^3.32"
glances = "^4.1.2"
speedtest-cli = "^2.1.3"
ansible = "^10.2.0"

[tool.poetry.dev-dependencies]
ansible-lint = { version = "^24.7.0", markers = "platform_system != 'Windows'" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
